# website

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.mjs
.claude/: settings.local.json
.claude/commands/session/: context.md
.github/workflows/: static.yml
docs/: ASTRO-GUIDE.md  CYCLOS-Change-Request-Form.md  CYCLOS-Website-v1-Announcement.docx  CYCLOS-Website-v1-Announcement.md
openspec/: AGENTS.md  project.md
openspec/changes/add-privacy-analytics/: tasks.md
openspec/changes/add-static-website/: tasks.md
openspec/changes/fix-partner-logos-consistency/: proposal.md  tasks.md
openspec/specs/website/: spec.md
partner/: ASSOC_Color.tif
public/: CNAME
scripts/: .gitkeep  generate_changelog.py  release.py
src/components/: Footer.astro  Header.astro  LanguageSwitcher.astro
src/content/: config.ts
src/content/news/: de-first-meeting.md  de-project-launch.md  el-first-meeting.md  el-project-launch.md  en-first-meeting.md  en-project-launch.md  fr-first-meeting.md  fr-project-launch.md  ro-first-meeting.md  ro-project-launch.md
src/i18n/: translations.ts
src/layouts/: BaseLayout.astro
src/pages/: index.astro
src/pages/de/: about.astro  contact.astro  index.astro  news.astro  partners.astro  resources.astro  work-packages.astro
src/pages/el/: about.astro  contact.astro  index.astro  news.astro  partners.astro  resources.astro  work-packages.astro
src/pages/en/: about.astro  contact.astro  index.astro  news.astro  partners.astro  (+2 more)
src/styles/: global.css
(+26 files in other folders)
